tests/invalid/take_reference_of_boxed_value_in_match.ri
enum Values {
    String(string),
    Int(int)
}

func main() {
    val := Values.String("Abc");
    match val {
        .String(&str) -> _ = str, // fail
        else -> {}
    }

    @assert(val is .String(&str2) && str2.* == "Abc"); // fail
}
